Review Requests: Fix button alignment, margins on Admin Features

--- a/includes-core/admin-core.css
+++ b/includes-core/admin-core.css
@@ -178,3 +178,8 @@ filter: blur(1.5px);
     margin-right: 10px;
   }
 }
+
+div.publishpress-wp-reviews-notice a.publishpress-dismiss {
+  vertical-align: top !important;
+  margin-bottom: 0 !important;
+}
